[package]
name = "emqu"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"
fastembed = "4.8.0"
glob = "0.3.2"
indicatif = "0.17.11"
serde_json = "1.0.140"
text-splitter = { version = "0.26.0", features = ["tokenizers"] }
tokenizers = { version = "0.21.1", features = ["http"] }
